kubernetes/production/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: zone-entries-prediction-production-ingressroute
  namespace: istio-system
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`zone-entries-prediction.models.kubeflow.emeralds.ari-aidata.eu`)
    services:
    - name: istio-ingressgateway
      port: 80
  tls:
    certResolver: letsencrypt
