kubernetes/production/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
    sidecar.istio.io/inject: "true"
  name: zone-entries-prediction
  namespace: models
  labels:
    name: zone-entries-prediction-prediction
spec:
  gateways:
  - knative-serving/knative-local-gateway
  - kubeflow/kubeflow-gateway
  hosts:
  - zone-entries-prediction.models.svc.cluster.local
  - zone-entries-prediction.models.kubeflow.emeralds.ari-aidata.eu
  http:
  - headers:
      request:
        set:
          Host: zone-entries-prediction-predictor-default.models.svc.cluster.local
    match:
    - authority:
        regex: ^zone-entries-prediction\.models(\.svc(\.cluster\.local)?)?(?::\d{1,5})?$
      gateways:
      - knative-serving/knative-local-gateway
    - authority:
        regex: ^zone-entries-prediction\.models\.kubeflow\.emeralds\.ari-aidata\.eu(?::\d{1,5})?$
      gateways:
      - kubeflow/kubeflow-gateway
    route:
    - destination:
        host: knative-local-gateway.istio-system.svc.cluster.local
        port:
          number: 80
      headers:
          response:
            add:
              request-type: model-inference
      weight: 100
